# FileManagementSystem

./: CMakeLists.txt  README.md  client.cpp  client.h  client1.cpp  client2.cpp  server.cpp
serverStorage/: IP.txt  Port.txt  Socket.txt  TCP.txt  UDP.txt
